DZF cierre conexion en DAOs

--- a/AnunciosGroup0.3/web/general-error.html
+++ b/AnunciosGroup0.3/web/general-error.html
@@ -13,6 +13,6 @@ and open the template in the editor.
     <body>
         <div>Opps</div>
         <h1>Hemos tenido un problema</h1>
-        <h4>Si no le gusta, chupela</h4>
+        <h4>Si no le gusta, contactese con un admin y weas</h4>
     </body>
 </html>
